compiler-core/src/parse/snapshots/rakun_core__parse__tests__no_let_binding_snapshot_2.snap
---
source: compiler-core/src/parse/tests.rs
expression: "wibble:Int = 4"
---
error: Syntax error
  ┌─ /src/parse/error.rakun:1:7
  │
1 │ wibble:Int = 4
  │       ^ There must be a 'let' to bind variable to value

Hint: Use let for binding.
See: https://tour.rakun.run/basics/assignments/
